<resources>
    <string name="app_name">Lab2</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="input1">学号：</string>
    <string name="input2">密码：</string>
    <string name="hintinput1">请输入学号</string>
    <string name="hintinput2">请输入密码</string>
    <string name="choice1">学生</string>
    <string name="choice2">教职工</string>
    <string name="signin">登录</string>
    <string name="signup">注册</string>
    <string name="desc">中大校徽</string>
    <string name="click_msg_right">登录成功</string>
    <string name="click_msg_wrong">用户名或密码错误</string>
    <string name="click_msg_reject_student">学生注册尚未开启</string>
    <string name="click_msg_reject_teacher">教职工注册尚未开启</string>
    <string name="yes">确定</string>
    <string name="choose1">您选择了[学生]</string>
    <string name="choose2">您选择了[教职工]</string>
    <string name="shoot_photo">您选择了[拍摄]</string>
    <string name="from_gallary">您选择了[从相册选择]</string>
    <string name="cancel">您选择了[取消]</string>
</resources>